--- a/image_conversion.ipynb
+++ b/image_conversion.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jaswa\\AppData\\Local\\Temp\\ipykernel_23140\\2048759798.py:3: DeprecationWarning: 'imghdr' is deprecated and slated for removal in Python 3.13\n",
+      "  import imghdr\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -16,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def RGB2THERMAL(image):\n",
-    "    img = Image.open('4_100.jpg')\n",
+    "    img = Image.open(image)\n",
     "    img = img.convert('L')\n",
     "    image = cv2.imread('greyscale_image.jpg', 0)\n",
     "    heatmap = cv2.applyColorMap(image, cv2.COLORMAP_JET)\n",
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,25 +48,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RGB images\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'save'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m img \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(data_dir, image_class)):\n\u001b[0;32m      4\u001b[0m     thermal_img \u001b[39m=\u001b[39m RGB2THERMAL(img)\n\u001b[1;32m----> 5\u001b[0m     thermal_img\u001b[39m.\u001b[39;49msave(\u001b[39m'\u001b[39m\u001b[39mdata/Thermal images/myphoto.jpg\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'save'"
+      "RGB images\n",
+      "1000_F_454598242_1TZQcFzkTqjzuxJ3g5eIi6eybKS0oe4F.jpg\n",
+      "1280px-Close_up_of_immature_mango_fruit.jpg\n",
+      "180604-mango-al-1027.jpg\n",
+      "210425_How-to-cut-a-Mango-6.jpg\n",
+      "21890543-one-single-fresh-ripe-organic-mango-isolated-on-white-background.jpg\n",
+      "23458853-one-single-fresh-ripe-organic-mango-isolated-on-white-background.jpg\n",
+      "29184274.jpg\n",
+      "29341f47db114b5596fcfe83aca09806.jpg\n",
+      "2f3f689e5d0d1184c8824f020662d52b.jpg\n",
+      "360_F_137197876_B4WqkfOTY32DJAp0yJB62y4bMJLB5aK7.jpg\n",
+      "360_F_448185869_GoJBvLOUIirTWI2YJTLLVJ85o8eCJ6Qz.jpg\n",
+      "70bd5f8fd50d30bfcab3ac0f27ff4202.png\n",
+      "89e371b42f2ffa58601102ac58504940.jpg\n",
+      "9005991522_59ba209ed3_b.jpg\n",
+      "a-mango-fruit-lying-on-a-wooden-table-CXABY5.jpg\n",
+      "ab47826b0dcea5d6a1e38f888cf43bda.jpg\n",
+      "ang77741-mango-fruit-juice-in-glass-one-piece-of-cut-and-one-full-A4PHP6.jpg\n",
+      "b_bw_mango_170721.jpg\n",
+      "cut-mango-next-to-a-whole-mango.jpg\n",
+      "d91e10d83ce92fd07cda3aee55609759_original.jpg\n",
+      "deca2637085532fbc14782acaa78619a.jpg\n",
+      "depositphotos_54981139-stock-photo-fresh-mango-fruit-with-cut.jpg\n",
+      "depositphotos_7249961-stock-photo-mango-fruit.jpg\n",
+      "fresh-australian-mango-for-sale-at-local-market-in-melbourne-victoria-australia-RJTDMK.jpg\n",
+      "fresh-mango-1231904.jpg\n",
+      "green-mango-varieties-eaten-still-59304011.jpg\n",
+      "group-of-three-ripe-unpeeled-uncut-sweet-haden-mangoes-C4FWW7.jpg\n",
+      "How-to-Cut-A-Mango-3-2.jpg\n",
+      "how-to-cut-a-mango-new-image.png\n",
+      "how-to-cut-and-eat-a-mango.jpg\n",
+      "how-to-cut-mango-10.jpg\n",
+      "how-to-cut-mango-9.jpg\n",
+      "image14.jpeg\n",
+      "image18.jpeg\n",
+      "images104.jpg\n",
+      "images105.jpg\n",
+      "images106.jpg\n",
+      "images111.jpg\n",
+      "images114.jpg\n",
+      "images115.jpg\n",
+      "images117.jpg\n",
+      "images123.jpg\n",
+      "images129.jpg\n",
+      "images130.jpg\n",
+      "images134.jpg\n",
+      "images138.jpg\n",
+      "images139.jpg\n",
+      "images142.jpg\n",
+      "images143.jpg\n",
+      "images15.jpg\n",
+      "images152.jpg\n",
+      "images153.jpg\n",
+      "images155.jpg\n",
+      "images157.jpg\n",
+      "images172.jpg\n",
+      "images175.jpg\n",
+      "images181.jpg\n",
+      "images188.jpg\n",
+      "images193.jpg\n",
+      "images196.jpg\n",
+      "images24.jpg\n",
+      "images26.jpg\n",
+      "images27.jpg\n",
+      "images3.jpg\n",
+      "images34.jpg\n",
+      "images35.jpg\n",
+      "images40.jpg\n",
+      "images43.jpg\n",
+      "images51.jpg\n",
+      "images6.jpg\n",
+      "images73.jpg\n",
+      "images75.jpg\n",
+      "images76.jpg\n",
+      "images8.jpg\n",
+      "images82.jpg\n",
+      "images85.jpg\n",
+      "images88.jpg\n",
+      "images89.jpg\n",
+      "img_1057.jpg\n",
+      "indian-alphonso-mango-fruits-grass-260nw-1953056623.jpg\n",
+      "indian-alphonso-mango-fruits-grass-260nw-1976288450.jpg\n",
+      "indian-mangoes-E1N51P.jpg\n",
+      "isolated-mango-one-fruit-cut-out-slices-white-background-clipping-path-142972724.jpg\n",
+      "isolated-uncut-mango-one-whole-fruit-leaves-white-background-clipping-path-80901750.jpg\n",
+      "isolated-white-background-organic-ripe-yellow-mango-tropical-fruit-123879413.jpg\n",
+      "les-mangues-alphonso-brutes-mangifera-indica-l-anacardiaceae-ratnagiri-maharashtra-inde-dfy5m8.jpg\n",
+      "Mahachnok_2018_500x500.jpeg\n",
+      "manalagi-green-mango-varieties-east-java-indonesia-243655107.jpg\n",
+      "Mango-1.jpg\n",
+      "mango-1239347__340.jpg\n",
+      "mango-390685_960_720.jpg\n",
+      "mango-4996445__340.png\n",
+      "mango-896180__340.jpg\n",
+      "mango-clipping-path-mango-isolated-white-background_299651-1435.jpg\n",
+      "mango-con-chile-1.jpg\n",
+      "mango-fruit-isolated-on-white-1904699.jpg\n",
+      "mango-isolated-on-white-background-photo.jpg\n",
+      "mango-tree-321075__340.jpg\n",
+      "mangoes-1320111__340.jpg\n",
+      "mangue-isoles-ensemble-de-mangues-sur-une-branche-isole-sur-fond-blanc-avec-clipping-path-hh226h.jpg\n",
+      "n-mango-fruit-hanging-tree-branch-leaves-isolated-white-background-158511677.jpg\n",
+      "nd-tropical-summer-harvest-concept-top-view-close-up-macro-copy-space-W20X95.jpg\n",
+      "nd-tropical-summer-harvest-concept-top-view-close-up-macro-copy-space-W20Y7F.jpg\n",
+      "one-single-fresh-ripe-organic-mango-isolated-on-white-background-DF59AN.jpg\n",
+      "one-whole-yellow-mango-fruit-isolated-on-white-background-2BAM06G.jpg\n",
+      "open-sliced-red-mango-on-top-of-uncut-mangoes.jpg\n",
+      "Orange-Mango-Juice-4.jpg\n",
+      "pngtree-fruit-hand-drawn-cartoon-small-object-mango-vector-image_1342213.jpg\n",
+      "ripe-mango-fruit-hanging-on-260nw-1763521217.jpg\n",
+      "round-whole-fresh-tropical-clipping-path-included-full-depth-field-201265151.jpg\n",
+      "shutterstock_633850412-e1645245911604-1200x1200.jpg\n",
+      "single-ripe-unpeeled-uncut-sweet-haden-mango-C4FWT4.jpg\n",
+      "stock-photo-mango-with-leaves-isolated-on-white-ripe-fresh-mango-clipping-path-1669700809.jpg\n",
+      "stock-photo-three-dassehri-mangoes-on-a-white-plate-against-a-white-background-1972716407.jpg\n",
+      "Symptoms-of-spongy-tissue-development-in-Alphonso-mango-fruits-A-Spongy-uncut-fruit-B_Q640.jpg\n",
+      "tips-to-buy-mangoes.jpg\n",
+      "two-fresh-ripe-organic-mangoes-over-white-background-DF59AB.jpg\n",
+      "two-mangoes-stock-images_csp3928085.jpg\n",
+      "two-ripe-mangoes-on-a-palm-leaf-wooden-plate-2BT3E73.jpg\n",
+      "two-ripe-whole-mango-fruits-on-blue-stone-background-EW7J50.jpg\n",
+      "web1_mangomagic.jpg\n",
+      "whole-green-mangoes-.jpg\n",
+      "whole-unpeeled-uncut-mango-papaya-illustration_csp44499129.jpg\n",
+      "whole-unpeeled-uncut-mango-papaya-vector-clip-art_csp44037510.jpg\n",
+      "whole-unpeeled-uncut-mango-papaya-vector-clipart_csp44499205.jpg\n",
+      "whole-unpeeled-uncut-papaya-tropical-fruit-vector-13362565.jpg\n",
+      "whole-unpeeled-uncut-sweet-mango-260nw-570361891.jpg\n",
+      "whole-unpeeled-uncut-sweet-mango-tropical-fruit-vector-13439182.jpg\n",
+      "Thermal images\n",
+      "thermal1.jpg\n"
      ]
     }
    ],
@@ -65,16 +193,15 @@
     "for image_class in os.listdir(data_dir):\n",
     "    print(image_class)\n",
     "    for img in os.listdir(os.path.join(data_dir, image_class)):\n",
-    "        thermal_img = RGB2THERMAL(img)\n",
-    "        thermal_img.save('data/Thermal images/myphoto.jpg')"
+    "        # print(img)\n",
+    "        RGB_img = Image.open(os.path.join(data_dir, image_class, img))\n",
+    "        RGB_img = RGB_img.convert('L')\n",
+    "        RGB_img.save('greyscale_image.jpg')\n",
+    "        RGB_img = cv2.imread('greyscale_image.jpg', 0)\n",
+    "        thermal_img = cv2.applyColorMap(RGB_img, cv2.COLORMAP_JET)\n",
+    "        plt.imsave('data/Thermal images/thermal1.jpg', thermal_img)\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
