--- a/image.ipynb
+++ b/image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
     "\n",
     "# Open the image\n",
-    "img = Image.open('4_100.jpg')\n",
+    "img = Image.open('mango.jpg')\n",
     "\n",
     "# Convert the image to greyscale\n",
     "img = img.convert('L')\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "-1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,14 +48,15 @@
    "source": [
     "image = cv2.imread('greyscale_image.jpg', 0)\n",
     "heatmap = cv2.applyColorMap(image, cv2.COLORMAP_JET)\n",
-    "plt.imsave('thermal_image.jpg', heatmap)\n",
+    "plt.imsave('data/Thermal images/thermal.jpg', heatmap)\n",
+    "\n",
     "cv2.imshow('heatmap', heatmap)\n",
     "cv2.waitKey(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,17 +90,47 @@
     "    img = img.convert('L')\n",
     "    image = cv2.imread('greyscale_image.jpg', 0)\n",
     "    heatmap = cv2.applyColorMap(image, cv2.COLORMAP_JET)\n",
+    "    cv2.imshow('heatmap', heatmap)\n",
+    "    cv2.waitKey(0)\n",
     "    return heatmap\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "RGB2THERMAL() missing 1 required positional argument: 'image'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m RGB2THERMAL()\n",
+      "\u001b[1;31mTypeError\u001b[0m: RGB2THERMAL() missing 1 required positional argument: 'image'"
+     ]
+    }
+   ],
    "source": [
-    "RGB2THERMAL('4_100.jpg')"
+    "RGB2THERMAL()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid imaginary literal (3848945029.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[12], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    string(4_100.jpg)\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid imaginary literal\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
