--- a/google colab version.ipynb
+++ b/google colab version.ipynb
@@ -1,44 +1,30 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!git config --global user.email \"jaswanthkrishna.e20@iiits.in\"\n",
-        "!git config --global user.name \"JaswanthKrishnaE\"\n",
-        "!git config --global user.password \"99559133159project\""
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "FQJx-dkPa4Nz"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!git config --global user.email \"jaswanthkrishna.e20@iiits.in\"\n",
+        "!git config --global user.name \"JaswanthKrishnaE\"\n",
+        "!git config --global user.password \"jaswanth9959133159\""
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ar7NUJLHcz5_"
+      },
+      "outputs": [],
       "source": [
         "token = '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'\n",
         "username = \"JaswanthKrishnaE\"\n",
         "repo = 'RGB-image-to-Thermal-Image-conversion'"
-      ],
-      "metadata": {
-        "id": "ar7NUJLHcz5_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -52,36 +38,34 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/bin/bash: gh: command not found\n"
           ]
         }
       ],
       "source": [
-        "!gh repo clone JaswanthKrishnaE/RGB-image-to-Thermal-Image-conversion"
+        "!git clone https://{token}@github.com/{username}/{repo}"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "yrmk7sjOVN2u"
+      },
+      "outputs": [],
       "source": [
         "import cv2\n",
         "import os\n",
         "import matplotlib.pyplot as plt\n",
         "from PIL import Image"
-      ],
-      "metadata": {
-        "id": "yrmk7sjOVN2u"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd {'/content/RGB-image-to-Thermal-Image-conversion'}"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,19 +73,26 @@
         "id": "TFhv_P6YX-of",
         "outputId": "4075c24a-d21e-4ab7-9639-68a5851e4590"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/RGB-image-to-Thermal-Image-conversion\n"
           ]
         }
+      ],
+      "source": [
+        "%cd {'/content/RGB-image-to-Thermal-Image-conversion'}"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "N8DJ9h4fVrIE"
+      },
+      "outputs": [],
       "source": [
         "from PIL import Image\n",
         "# Open the image\n",
@@ -110,15 +101,15 @@
         "img = img.convert('L')\n",
         "# Save the image\n",
         "img.save('/content/RGB-image-to-Thermal-Image-conversion/greyscale_image.jpg')"
-      ],
-      "metadata": {
-        "id": "N8DJ9h4fVrIE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Sup-2BbpWHP1"
+      },
+      "outputs": [],
       "source": [
         "i = 0\n",
         "image = cv2.imread('/content/RGB-image-to-Thermal-Image-conversion/greyscale_image.jpg', 0)\n",
@@ -127,18 +118,11 @@
         "\n",
         "# cv2.imshow('heatmap', heatmap)\n",
         "# cv2.waitKey(0)"
-      ],
-      "metadata": {
-        "id": "Sup-2BbpWHP1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git status"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -146,11 +130,10 @@
         "id": "3HFIFrOcZym2",
         "outputId": "f165a4c6-a9a8-4b49-fbf5-4861de95aab4"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "On branch main\n",
             "Your branch is up to date with 'origin/main'.\n",
@@ -168,13 +151,14 @@
             "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
           ]
         }
+      ],
+      "source": [
+        "!git status"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git add --all"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -182,11 +166,10 @@
         "id": "0mCW5s06aX_b",
         "outputId": "7fa86b29-dd79-4eff-8aeb-69e29349d324"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "warning: adding embedded git repository: RGB-image-to-Thermal-Image-conversion\n",
             "\u001b[33mhint: You've added another git repository inside your current repository.\u001b[m\n",
@@ -204,13 +187,14 @@
             "\u001b[33mhint: See \"git help submodule\" for more information.\u001b[m\n"
           ]
         }
+      ],
+      "source": [
+        "!git add --all"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git commit -a -m \"Google colab push\""
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -218,11 +202,10 @@
         "id": "ZAod5h7Aalb8",
         "outputId": "2be2ce45-01db-4494-dd99-fe4498835721"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "*** Please tell me who you are.\n",
@@ -238,13 +221,14 @@
             "fatal: unable to auto-detect email address (got 'root@c270360d1e7e.(none)')\n"
           ]
         }
+      ],
+      "source": [
+        "!git commit -a -m \"Google colab push\""
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git remote -v"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -252,23 +236,23 @@
         "id": "wpOTKiPdbbPH",
         "outputId": "86f700d9-73f3-4e4c-f95e-56be5e47c7ae"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "origin\thttps://github.com/JaswanthKrishnaE/RGB-image-to-Thermal-Image-conversion.git (fetch)\n",
             "origin\thttps://github.com/JaswanthKrishnaE/RGB-image-to-Thermal-Image-conversion.git (push)\n"
           ]
         }
+      ],
+      "source": [
+        "!git remote -v"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git push origin google_main"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -276,18 +260,49 @@
         "id": "It7yVLYLbGUI",
         "outputId": "42958f9f-cd5f-4bdb-d897-addd98fe2af2"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "error: src refspec google_main does not match any\n",
             "\u001b[31merror: failed to push some refs to 'https://github.com/JaswanthKrishnaE/RGB-image-to-Thermal-Image-conversion.git'\n",
             "\u001b[m"
           ]
         }
+      ],
+      "source": [
+        "!git push origin google_main"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.2"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "07fb9c35f59983460ffd9a6d61da6a0a14b2d1b8d72f6aa35ee735d0540cc3b1"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
