--- a/google colab version.ipynb
+++ b/google colab version.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 19,
       "metadata": {
         "id": "FQJx-dkPa4Nz"
       },
@@ -15,43 +15,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "id": "ar7NUJLHcz5_"
       },
       "outputs": [],
       "source": [
-        "token = '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'\n",
+        "token = 'g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'\n",
         "username = \"JaswanthKrishnaE\"\n",
         "repo = 'RGB-image-to-Thermal-Image-conversion'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VNkUglfnUQ6P",
-        "outputId": "34d7870a-38dd-4be3-9417-95a9752c5339"
+        "outputId": "19c0c78c-07ab-455b-ec5a-5dfa49e76d5f"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "/bin/bash: gh: command not found\n"
+            "Cloning into 'RGB-image-to-Thermal-Image-conversion'...\n",
+            "remote: Enumerating objects: 392, done.\u001b[K\n",
+            "remote: Counting objects:  16% (1/6)\u001b[K\rremote: Counting objects:  33% (2/6)\u001b[K\rremote: Counting objects:  50% (3/6)\u001b[K\rremote: Counting objects:  66% (4/6)\u001b[K\rremote: Counting objects:  83% (5/6)\u001b[K\rremote: Counting objects: 100% (6/6)\u001b[K\rremote: Counting objects: 100% (6/6), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Total 392 (delta 2), reused 6 (delta 2), pack-reused 386\u001b[K\n",
+            "Receiving objects: 100% (392/392), 288.79 MiB | 36.75 MiB/s, done.\n",
+            "Resolving deltas: 100% (14/14), done.\n",
+            "Updating files: 100% (353/353), done.\n"
           ]
         }
       ],
       "source": [
-        "!git clone https://{token}@github.com/{username}/{repo}"
+        "!git clone https://{token}@github.com/{username}/{repo}.git"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
         "id": "yrmk7sjOVN2u"
       },
@@ -65,18 +72,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TFhv_P6YX-of",
-        "outputId": "4075c24a-d21e-4ab7-9639-68a5851e4590"
+        "outputId": "bd5be785-f04f-499c-cb19-1b1f876fb518"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "/content/RGB-image-to-Thermal-Image-conversion\n"
           ]
@@ -88,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "id": "N8DJ9h4fVrIE"
       },
@@ -96,7 +103,7 @@
       "source": [
         "from PIL import Image\n",
         "# Open the image\n",
-        "img = Image.open('/content/RGB-image-to-Thermal-Image-conversion/mango.jpg')\n",
+        "img = Image.open('/content/RGB-image-to-Thermal-Image-conversion/4_100.jpg')\n",
         "# Convert the image to greyscale\n",
         "img = img.convert('L')\n",
         "# Save the image\n",
@@ -105,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "id": "Sup-2BbpWHP1"
       },
@@ -122,33 +129,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3HFIFrOcZym2",
-        "outputId": "f165a4c6-a9a8-4b49-fbf5-4861de95aab4"
+        "outputId": "839a6075-a66e-42f9-d090-3a34b4a57199"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "On branch main\n",
-            "Your branch is up to date with 'origin/main'.\n",
-            "\n",
-            "Changes not staged for commit:\n",
-            "  (use \"git add <file>...\" to update what will be committed)\n",
-            "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-            "\t\u001b[31mmodified:   greyscale_image.jpg\u001b[m\n",
+            "Your branch is ahead of 'origin/main' by 1 commit.\n",
+            "  (use \"git push\" to publish your local commits)\n",
             "\n",
             "Untracked files:\n",
             "  (use \"git add <file>...\" to include in what will be committed)\n",
             "\t\u001b[31mRGB-image-to-Thermal-Image-conversion/\u001b[m\n",
-            "\t\u001b[31mdata/Thermal images/thermal0.jpg\u001b[m\n",
             "\n",
-            "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+            "nothing added to commit but untracked files present (use \"git add\" to track)\n"
           ]
         }
       ],
@@ -158,18 +160,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0mCW5s06aX_b",
-        "outputId": "7fa86b29-dd79-4eff-8aeb-69e29349d324"
+        "outputId": "0f36c0fe-c5ab-490b-fa64-d7572f1a7ee6"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "warning: adding embedded git repository: RGB-image-to-Thermal-Image-conversion\n",
             "\u001b[33mhint: You've added another git repository inside your current repository.\u001b[m\n",
@@ -194,31 +196,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZAod5h7Aalb8",
-        "outputId": "2be2ce45-01db-4494-dd99-fe4498835721"
+        "outputId": "f3ddbcc3-c22a-453f-adf8-c0034b165db7"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "\n",
-            "*** Please tell me who you are.\n",
-            "\n",
-            "Run\n",
-            "\n",
-            "  git config --global user.email \"you@example.com\"\n",
-            "  git config --global user.name \"Your Name\"\n",
-            "\n",
-            "to set your account's default identity.\n",
-            "Omit --global to set the identity only in this repository.\n",
-            "\n",
-            "fatal: unable to auto-detect email address (got 'root@c270360d1e7e.(none)')\n"
+            "[main 896e0cf] Google colab push\n",
+            " 1 file changed, 1 insertion(+)\n",
+            " create mode 160000 RGB-image-to-Thermal-Image-conversion\n"
           ]
         }
       ],
@@ -228,21 +221,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wpOTKiPdbbPH",
-        "outputId": "86f700d9-73f3-4e4c-f95e-56be5e47c7ae"
+        "outputId": "271a2ea7-4588-403f-ccec-c6859ef6f461"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "origin\thttps://github.com/JaswanthKrishnaE/RGB-image-to-Thermal-Image-conversion.git (fetch)\n",
-            "origin\thttps://github.com/JaswanthKrishnaE/RGB-image-to-Thermal-Image-conversion.git (push)\n"
+            "origin\thttps://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@github.com/JaswanthKrishnaE/RGB-image-to-Thermal-Image-conversion (fetch)\n",
+            "origin\thttps://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@github.com/JaswanthKrishnaE/RGB-image-to-Thermal-Image-conversion (push)\n"
           ]
         }
       ],
@@ -252,28 +245,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "It7yVLYLbGUI",
-        "outputId": "42958f9f-cd5f-4bdb-d897-addd98fe2af2"
+        "outputId": "adc0645a-b069-468e-b848-f82f61484299"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "error: src refspec google_main does not match any\n",
-            "\u001b[31merror: failed to push some refs to 'https://github.com/JaswanthKrishnaE/RGB-image-to-Thermal-Image-conversion.git'\n",
-            "\u001b[m"
+            "fatal: could not read Password for 'https://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@github.com': No such device or address\n"
           ]
         }
       ],
       "source": [
-        "!git push origin google_main"
+        "!git push origin"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "O-H3_cPFn29C"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
